@@ -1,7 +1,5 @@
 package com.rms.setting;
 
-import sun.misc.BASE64Decoder;
-
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
 import java.security.InvalidKeyException;
@@ -15,36 +13,40 @@ public class Diff {
     private static final byte[] keyValue =
             new byte[] { 'T', 'h', 'i', 's', 'I', 's', 'A', 'S', 'e', 'c', 'r', 'e', 't', 'K', 'e', 'y' };
 
-    public static String decrypt(String encryptedText)  {
-        byte[] decValue = new byte[0];
-       try{
-          // String encryptedText = "mVJnjVCfG+VURCbaaoRGZbHfL2dXP/irVZS1hhu+l10=";
-           Key key = generateKey();
-           Cipher c = Cipher.getInstance(ALGORITHM);
-           c.init(Cipher.DECRYPT_MODE, key);
-           byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedText);
-            decValue = c.doFinal(decordedValue);
-       }catch (Exception e){
-           
-       }
-        String decryptedValue = new String(decValue);
-        return decryptedValue;
+    public static String decrypt(String encryptedText) {
+        try {
+            Key key = generateKey();
+            Cipher c = Cipher.getInstance(ALGORITHM);
+            c.init(Cipher.DECRYPT_MODE, key);
+            byte[] decodedValue = Base64.getDecoder().decode(encryptedText);
+            byte[] decryptedBytes = c.doFinal(decodedValue);
+            return new String(decryptedBytes);
+        } catch (Exception e) {
+            e.printStackTrace();  // Optional: improve logging
+            return null;
+        }
     }
 
     private static Key generateKey() {
-        Key key = new SecretKeySpec(keyValue, ALGORITHM);
-        return key;
+        return new SecretKeySpec(keyValue, ALGORITHM);
     }
 
-
-
-
     public static String encrypt(String input)
-            throws NoSuchPaddingException, NoSuchAlgorithmException, IllegalBlockSizeException, BadPaddingException, InvalidKeyException {
+            throws NoSuchPaddingException, NoSuchAlgorithmException,
+            IllegalBlockSizeException, BadPaddingException, InvalidKeyException {
         Cipher cipher = Cipher.getInstance(ALGORITHM);
         cipher.init(Cipher.ENCRYPT_MODE, generateKey());
         byte[] cipherText = cipher.doFinal(input.getBytes());
-        return Base64.getEncoder()
-                .encodeToString(cipherText);
+        return Base64.getEncoder().encodeToString(cipherText);
+    }
+
+    public static void main(String[] args) {
+       try{
+           String encryptedText = "0";
+           System.out.println(encrypt(encryptedText));
+       }
+       catch(Exception e){
+           e.printStackTrace();
+       }
     }
 }
